# Studienprojekt

./: README.md  ssh-notes.txt
shark/: .gitignore  CMakeLists.txt  TODO.txt
shark/docs/dev-guide/: Makefile  dev-guide.tex
shark/include/shark/: util.h
shark/malformedTests/: Readme.txt  malformedJMPTest1.asm  malformedTest1.asm  malformedTest2.asm  malformedTest3.asm
shark/src/: CMakeLists.txt
shark/src/Backend/: Backend.cpp  CMakeLists.txt  README.md
shark/src/Backend/testcase/: README.md  meanshift.out.asm  meanshift.out.bc  newton.out.ll
shark/src/DemoBackEnd/: CMakeLists.txt  DemoBackEnd.cpp
shark/src/DemoFrontEnd/: CMakeLists.txt  DemoFrontEnd.cpp
shark/src/DemoPass/: CMakeLists.txt  DemoPass.cpp  DemoPassStandalone.cpp  hello.bc  hello.c  hello.ll  w00pw00p.bc
shark/src/Frontend/: CMakeLists.txt  Frontend.cpp  README.md
shark/src/Transformation/: CMakeLists.txt  README.md  transformation.cpp
shark/src/Transformation/samples/: meanshift.c  meanshift.ll  meanshift.out.ll  newton.c  newton.ll
shark/test/: test1.asm  test1.bc  test1.out.asm  test1.out.bc  test2.asm  test2.bc  test2.out.asm  test2.out.bc  test2BasicBlocks.asm  test3.asm  test3.bc  test3.out.asm  test3.out.bc  testBB&JMP1.asm  testBB&JMP1.bc  testBB&JMP1.out.asm  testBB&JMP1.out.bc  testBB&JMP2.asm  testBB&JMP2.bc  testBB&JMP2.out.asm  testBB&JMP2.out.bc
